@@ -1,3 +1,9 @@
+2008-03-12  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>
+
+	* tag V00-09-04
+	* do not increment counters within debug messages (reported by
+	Kurt)
+
 2008-02-27  Emilio Meschi  <emilio.meschi@cern.ch>
 
 	* tag V00-09-03
